	Change (preset) server from settings menu, (all channelsx.js have to use the same server-ip)
	Save audio priority permanent (removed 'none' setting)
	Dynamic audio selection with green button while watching. (Settings menu as before)
	Added EPG Icon for radio channels.
	From settings menu channel groups can be switched off.

0.21	Language in sepate file, link your lang_XXX.js to language.js to activate it.
	Updated EPG filter, (DVB-T defaults to German), added MTV transponder on 19E.
	Audio, subs etc settings are now stored on the box. So they are kept after reboot.
	OSD Time out can be set from settings.js
	Pause Live TV on Server
	Added a 'none' to audio prio settings, which restores the factory setting.
	Timer ADD/ Timer DEL is now possible by using SmartTVWeb (Show Timers still uses restfulapi) (No more patching of restfulapi is needed!)
	Instant REC now only records current program ( no EPG, no recording )
	Recordsmenu shows recording date/time
	Protection uses Timeout to reprotect.
	Protection of recordings based on group the channel is in.


0.20	Updated EPG filter
	SearchTimers Submenu.
	Channels updates
	In guideview you can have updates for all channels in view, was changed because it was too slow on 1910/1960 but 1963/1903 can handle it.
	Added PG & content info.
	fixed show double epg info (epg shortinfo = epg ext. info)
	timer to stop duplicate instant recordings.( Default 15 minutes)
	In recordings menu 0 rewinds recording to 0.


0.19	Added SleepTimer in menu 1 Settings. (Key is stopbutton)
	Timer menu OK shows same info as BLUE
	Updated EPG filter for MTV Transponder (Nick JR france, Nick NL)
	Channel group 0 : removed channels 30W, updated channels 28.8E 
	Show maps for first level submaps. <OK> to enter submap (Can be switched off in settings to keep old way of displaying)
	Timer entry for recording. (Starts instant recording at timer start)
	Added local recording, for units with hdd 
		Use epg view (yellow or menu 3) to set timers